<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Caric\'Actus</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_big_pic">BigPicActivity</string>
    <string name="menuButton_allImages">CARICATURES</string>
    <string name="menuButton_tags">THEMES</string>
    <string name="menuButton_authors">DESSINATEURS</string>
    <string name="menuButton_bestImage">EPINE DE LA SEMAINE</string>
    <string name="title_activity_small_pic">SmallPicActivity</string>
    <string name="description_backButton">Menu Button</string>
    <string name="description_refreshButton">Refresh Button</string>
    <string name="description_bigPicButton">BicPic Button</string>
    <string name="description_smallPicButton">SmallPic Button</string>
    <string name="description_barbel">Barbelés</string>
    <string name="description_cactusTop">Cactus Top</string>
    <string name="description_cactusMiddle">Cactus Middle</string>
    <string name="description_cactusBottom">Cactus Bottom</string>
    <string name="title_activity_tag">TagActivity</string>
    <string name="description_tag">Tag Tile</string>
    <string name="title_activity_reload">ReloadActivity</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_best_pic">BestPicActivity</string>
    <string name="title_activity_author">AuthorActivity</string>

</resources>