<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<ScrollView android:id="@+id/smallPicScroller"
	    android:layout_below="@id/included"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
		
	    <RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" >
	        
		    <RelativeLayout android:id="@+id/topCactus"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content" >
			    
			    <ImageView 
				    android:layout_width="match_parent"
				    android:layout_height="match_parent"
				    android:src="@drawable/cactus_haut"
				    android:scaleType="fitXY"
				    android:contentDescription="@string/description_cactusTop" />
			    
		    </RelativeLayout>
		    
		    
    	    <RelativeLayout android:id="@+id/scrollerBody"
    	        android:layout_below="@id/topCactus"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:gravity="center_horizontal" >
		    
		    </RelativeLayout>
		    
    	    
		   	<RelativeLayout android:id="@+id/bottomCactus"
			    android:layout_below="@id/scrollerBody"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content" >
			    
			    <ImageView 
				    android:layout_width="match_parent"
				    android:layout_height="match_parent"
				    android:src="@drawable/cactus_bas"
				    android:scaleType="fitXY"
				    android:contentDescription="@string/description_cactusBottom" />
			    
		    </RelativeLayout>
	        
	    </RelativeLayout>
	    
	</ScrollView>
	
	<ImageView android:id="@+id/barbel"
	    android:layout_width="match_parent"
	    android:layout_height="150dp"
		android:contentDescription="@string/description_barbel" />
	
</RelativeLayout>

